--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
+bcrypt==4.1.2
 blinker==1.7.0
 click==8.1.7
+colorama==0.4.6
 Flask==3.0.3
+Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 itsdangerous==2.2.0
 Jinja2==3.1.3
