Created first flag of church_of_jowett challenge to teach people how JWT tokens work

--- a/challenges/church_of_jowett/challenge.toml
+++ b/challenges/church_of_jowett/challenge.toml
@@ -6,4 +6,4 @@ Don't feel like coding today, so I stole from a better ctf
 category = "web"
 difficulty = "hard"
 points = 200
-flag = "DUCTF{Y0u_Kn0W_M4Ss_A5s1GnM3Nt_c890ne89c3}"
+flag = "saint{h1s_h0lyness_w0uld_b3_pr0ud}"
