Updated dockerfile in line with master

--- a/challenges/church_of_jowett/container/Dockerfile
+++ b/challenges/church_of_jowett/container/Dockerfile
@@ -1,19 +1,17 @@
 FROM python:3.8-alpine
 
+STOPSIGNAL SIGINT
+EXPOSE 3001
+
 RUN apk update
-
-RUN mkdir /church_of_jowett
-RUN mkdir /church_of_jowett/src
-
-COPY requirements.txt /church_of_jowett
-COPY run.py /church_of_jowett
-COPY run.sh /church_of_jowett
-
-COPY ./src /church_of_jowett/src
-RUN chmod +x /church_of_jowett/run.sh
 
 WORKDIR /church_of_jowett
 
-EXPOSE 3001
+COPY requirements.txt ./
+RUN python3 -m pip install -r requirements.txt
 
-CMD ["sh", "run.sh"]
+COPY ./src /church_of_jowett/src
+
+COPY run.py ./
+
+CMD ["python3", "run.py"]
